2005 07 17
Changed license to dual GPL/CC, since we're using CC on protocolinfo.org.
Changed skypeout pattern to the scary long one, because the old one just
doesn't work.  Added battlefield2.  Added protocolinfo advertisements.

2005 06 17
Added freenet pattern.  Commented out old pattern in ares.  Fixed minor
typo in edonkey pattern.

2005 06 04
Improved ares.  Added note to ntp.

2005 05 27
Improved ntp.  Tinkered with the documentation.

2005 05 26
Added doom3 and ntp.  \0d --> \x0d in quicktime and msnmessenger.  Updated
commented out version of vnc.  Made irc much faster.

2005 05 25
Improved counterstrike and renamed it counterstrike-source for clarity.

2005 05 23
Realizing that "\x7c" is treated _exactly_ like "|" (and so forth):
\x7c --> \| in battlefield1942
\x2b --> \+ in soribada
\x2e --> \. in tesla
Added halflife2-deathmatch.

2005 05 19
Fixed rar (had the zip pattern by accident).  Fixed what I think was a typo
in finger '$' --> '^'.  Added trivial script, test_all.sh, to testing.

2005 05 18
Updated skype (split into skypeout and skypetoskype), counterstrike and
flash.  gnutella should now match gnutella 2.  Added zip, rar and exe. 
Fixed typo: rstp --> rtsp.  Tinkered with gopher.

2005 04 29
Reorganization.  No functional changes.

2005 04 26
Added soribada, ares.

2005 03 13
Added poco, qq, kugoo, 100bao (all Chinese things I've never heard of...).

2005 02 06
Added sip.  Tweaked "pattern quality" on a number of patterns.

2005 01 29
Improved ssh, it now matches both v1 and v2.

Improved and tested fasttrack.  It was overmatching in some cases, now
it isn't.

Moved audiogalaxy to extra/ as, from what I can tell, no one uses it (the 
program) anymore.

2005 01 20
- gnutella now matches UDP Gnutella packets as well as TCP.  
- Removed bearshare and winmx (just use gnutella).  
- Improved jabber.
- Trivial change to x11.
- Fixed httpaudio, httpvideo, httpcachehit and httpcachemiss, which were
all missing a [\x09-\x0d ].
- Added ssdp.