@@ -4,6 +4,7 @@
 
 #define MAX 1500
 #define TIMES 100000
+#define MAX_PATTERN_LEN 8192
 
 static int hex2dec(char c)
 {
@@ -64,6 +65,11 @@ int main(int argc, char ** argv)
 		return 1;
 	}
 	patternlen = strlen(s);
+	if(patternlen > MAX_PATTERN_LEN)
+	{
+		fprintf(stderr, "Pattern is too long!  Max is %d\n", MAX_PATTERN_LEN);
+		return 1;
+	}
 
 	s = pre_process(s); /* do \xHH escapes */
 
